Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -894,7 +894,7 @@
   "pli-tv-kd2:27.9.3": "ʻGo and make amends for this offense. ",
   "pli-tv-kd2:27.9.4": "When you return, we’ll make amends for it with you.’ ",
   "pli-tv-kd2:27.9.5": "If he’s able to do so, it’s good. ",
-  "pli-tv-kd2:27.9.6": "If he’s not, they should send a monk using the seven-day allowance: ",
+  "pli-tv-kd2:27.9.6": "If he’s not, they should send a monk under the seven-day allowance: ",
   "pli-tv-kd2:27.9.7": "ʻGo and make amends for this offense. ",
   "pli-tv-kd2:27.9.8": "When you return, we’ll make amends for it with you.’” ",
   "pli-tv-kd2:27.10.1": "Soon afterwards the whole sangha in a certain monastery had committed the same offense. ",
