Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -906,7 +906,7 @@
   "pli-tv-kd2:27.11.2": "“When someone does such-and-such, he’s committed an offense with this name. ",
   "pli-tv-kd2:27.11.3": "If you have committed this offense, ",
   "pli-tv-kd2:27.11.4": "you should make amends for it.” ",
-  "pli-tv-kd2:27.11.5": "The other monk then said, ",
+  "pli-tv-kd2:27.11.5": "The other monk said, ",
   "pli-tv-kd2:27.11.6": "“It’s not just I alone who have committed this offense, ",
   "pli-tv-kd2:27.11.7": "but this whole sangha has committed it.” ",
   "pli-tv-kd2:27.11.8": "The learned monk said, ",
