Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -903,7 +903,7 @@
   "pli-tv-kd2:27.10.4": "A monk went up to him and asked, ",
   "pli-tv-kd2:27.10.5": "“When someone does such-and-such, what’s the name of the offense he’s committed?” ",
   "pli-tv-kd2:27.11.1": "The learned monk replied, ",
-  "pli-tv-kd2:27.11.2": "“When someone does such-and-such, he’s committed an offense with this name. ",
+  "pli-tv-kd2:27.11.2": "“When someone does such-and-such, he’s committed an offense of this name. ",
   "pli-tv-kd2:27.11.3": "If you have committed this offense, ",
   "pli-tv-kd2:27.11.4": "you should make amends for it.” ",
   "pli-tv-kd2:27.11.5": "The other monk said, ",
