--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -915,7 +915,7 @@
   "pli-tv-kd2:27.12.1": "Then, because of what the learned monk had said, the other monk made amends for that offense. He then went to the other monks and said, ",
   "pli-tv-kd2:27.12.2": "“When someone does such-and-such, he’s committed an offense of this name. ",
   "pli-tv-kd2:27.12.3": "This is the offense that you’ve committed. ",
-  "pli-tv-kd2:27.12.4": "and you should make amends for it.” ",
+  "pli-tv-kd2:27.12.4": "You should make amends for it.” ",
   "pli-tv-kd2:27.12.5": "But in spite of what he had said, those monks did not want to make amends for that offense. ",
   "pli-tv-kd2:27.12.6": "They told the Buddha. ",
   "pli-tv-kd2:27.13.1": "“In a case such as this, ",
