--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1389,7 +1389,7 @@
   "pli-tv-kd2:35.5.1": "“On an observance day you may go from a monastery with monks to a monastery with monks who belong to the same Buddhist sect if you know ",
   "pli-tv-kd2:35.5.2": "you’ll be able to get there on the same day. ",
   "pli-tv-kd2:35.5.3": "On an observance day you may go from a monastery with monks to a non-monastery with monks … ",
-  "pli-tv-kd2:35.5.4": "to a monastery or a non-monastery with monks who belong to the same Buddhist sect, if you know ",
+  "pli-tv-kd2:35.5.4": "to a monastery or a non-monastery with monks who belong to the same Buddhist sect if you know ",
   "pli-tv-kd2:35.5.5": "you’ll be able to get there on the same day. ",
   "pli-tv-kd2:35.5.6": "On an observance day you may go from a non-monastery with monks to a monastery with monks … ",
   "pli-tv-kd2:35.5.7": "to a non-monastery with monks … ",
