--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1397,7 +1397,7 @@
   "pli-tv-kd2:35.5.9": "you’ll be able to get there on the same day. ",
   "pli-tv-kd2:35.5.10": "On an observance day you may go from a monastery or a non-monastery with monks to a monastery with monks … ",
   "pli-tv-kd2:35.5.11": "to a non-monastery with monks … ",
-  "pli-tv-kd2:35.5.12": "to a monastery or a non-monastery with monks who belong to the same Buddhist sect, if you know ",
+  "pli-tv-kd2:35.5.12": "to a monastery or a non-monastery with monks who belong to the same Buddhist sect if you know ",
   "pli-tv-kd2:35.5.13": "you’ll be able to get there on the same day. ",
   "pli-tv-kd2:36.1.0": "38. The showing of persons to be avoided ",
   "pli-tv-kd2:36.1.1": "“You shouldn’t recite the Monastic Code with a nun seated in the gathering. ",
