--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1053,7 +1053,7 @@
   "pli-tv-kd2:29.2.8": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:29.2.9": "They know ",
   "pli-tv-kd2:29.2.10": "that there are other resident monks who haven’t arrived. ",
-  "pli-tv-kd2:29.2.11": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the observance-day procedure by reciting the Monastic Code. ",
+  "pli-tv-kd2:29.2.11": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the observance-day procedure and recite the Monastic Code. ",
   "pli-tv-kd2:29.2.12": "While they’re doing so, a smaller number of resident monks arrive. ",
   "pli-tv-kd2:29.2.13": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:29.2.14": "And there’s an offense of wrong conduct for the reciters. ",
