--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -939,7 +939,7 @@
   "pli-tv-kd2:28.3.1": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:28.3.2": "They don’t know ",
   "pli-tv-kd2:28.3.3": "that there are other resident monks who haven’t arrived. ",
-  "pli-tv-kd2:28.3.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the observance-day procedure and recited the Monastic Code. ",
+  "pli-tv-kd2:28.3.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the observance-day procedure and recite the Monastic Code. ",
   "pli-tv-kd2:28.3.5": "While they’re doing so, an equal number of resident monks arrive. ",
   "pli-tv-kd2:28.3.6": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:28.3.7": "And there’s no offense for the reciters. ",
