--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1183,7 +1183,7 @@
   "pli-tv-kd2:32.2.24": "And there’s a serious offense for the reciters. ",
   "pli-tv-kd2:32.2.25": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.26": "They know that there are other resident monks who haven’t arrived. ",
-  "pli-tv-kd2:32.2.27": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ And aiming at schism, they do the observance-day procedure by reciting the Monastic Code. ",
+  "pli-tv-kd2:32.2.27": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ And aiming at schism, they do the observance-day procedure and recite the Monastic Code. ",
   "pli-tv-kd2:32.2.28": "When they’ve just finished, an equal number of resident monks arrive. ",
   "pli-tv-kd2:32.2.29": "In such a case, what has been recited is valid, and the late arrivals should announce their purity in the presence of the others. ",
   "pli-tv-kd2:32.2.30": "And there’s a serious offense for the reciters. ",
