--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1154,7 +1154,7 @@
   "pli-tv-kd2:32.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.1.4": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
   "pli-tv-kd2:32.1.5": "And aiming at schism, they do the observance-day procedure and recite the Monastic Code. ",
-  "pli-tv-kd2:32.1.6": "While they’re doing so, a greater number of resident monks arrive. ",
+  "pli-tv-kd2:32.1.6": "While they’re doing it, a greater number of resident monks arrive. ",
   "pli-tv-kd2:32.1.7": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:32.1.8": "And there’s a serious offense for the reciters. ",
   "pli-tv-kd2:32.2.1": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
