--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1092,7 +1092,7 @@
   "pli-tv-kd2:30.2.11": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:30.2.12": "They think, ʻIs it allowable for us to do the observance-day procedure, or is it not?’ ",
   "pli-tv-kd2:30.2.13": "Being unsure, they do the observance-day procedure and recite the Monastic Code. ",
-  "pli-tv-kd2:30.2.14": "While they’re doing so, a smaller number of resident monks arrive. ",
+  "pli-tv-kd2:30.2.14": "While they’re doing it, a smaller number of resident monks arrive. ",
   "pli-tv-kd2:30.2.15": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:30.2.16": "And there’s an offense of wrong conduct for the reciters. ",
   "pli-tv-kd2:30.2.17": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
