--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1084,7 +1084,7 @@
   "pli-tv-kd2:30.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:30.2.4": "They think, ʻIs it allowable for us to do the observance-day procedure, or is it not?’ ",
   "pli-tv-kd2:30.2.5": "Being unsure, they do the observance-day procedure and recite the Monastic Code. ",
-  "pli-tv-kd2:30.2.6": "While they’re doing so, an equal number of resident monks arrive. ",
+  "pli-tv-kd2:30.2.6": "While they’re doing it, an equal number of resident monks arrive. ",
   "pli-tv-kd2:30.2.7": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:30.2.8": "And there’s an offense of wrong conduct for the reciters. ",
   "pli-tv-kd2:30.2.9": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
