--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -947,7 +947,7 @@
   "pli-tv-kd2:28.3.9": "They don’t know ",
   "pli-tv-kd2:28.3.10": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:28.3.11": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the observance-day procedure and recite the Monastic Code. ",
-  "pli-tv-kd2:28.3.12": "While they’re doing it, other resident monks arrive who are fewer in number. ",
+  "pli-tv-kd2:28.3.12": "While they’re doing it, a smaller number of resident monks arrive. ",
   "pli-tv-kd2:28.3.13": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:28.3.14": "And there’s no offense for the reciters. ",
   "pli-tv-kd2:28.4.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
