--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -420,7 +420,7 @@
   "pli-tv-kd4:7.3.9": "They don’t know ",
   "pli-tv-kd4:7.3.10": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:7.3.11": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the invitation procedure. ",
-  "pli-tv-kd4:7.3.12": "During the procedure other resident monks arrive who are fewer in number. ",
+  "pli-tv-kd4:7.3.12": "During the procedure a smaller number of resident monks arrive. ",
   "pli-tv-kd4:7.3.13": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:7.3.14": "And there’s no offense for those who already have invited. ",
   "pli-tv-kd4:7.4.1": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
