Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -413,7 +413,7 @@
   "pli-tv-kd4:7.3.2": "They don’t know ",
   "pli-tv-kd4:7.3.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:7.3.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the invitation procedure. ",
-  "pli-tv-kd4:7.3.5": "During the procedure an equal number of resident monks arrive. ",
+  "pli-tv-kd4:7.3.5": "While they’re doing it, an equal number of resident monks arrive. ",
   "pli-tv-kd4:7.3.6": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:7.3.7": "And there’s no offense for those who already have invited. ",
   "pli-tv-kd4:7.3.8": "On the invitation day It may be that five or more resident monks have gathered in a certain monastery. ",
