--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -520,7 +520,7 @@
   "pli-tv-kd4:8.2.2": "They know ",
   "pli-tv-kd4:8.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:8.2.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the invitation procedure. ",
-  "pli-tv-kd4:8.2.5": "During the procedure an equal number of resident monks arrive. ",
+  "pli-tv-kd4:8.2.5": "While they’re doing it, an equal number of resident monks arrive. ",
   "pli-tv-kd4:8.2.6": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:8.2.7": "And there’s an offense of wrong conduct for those who already have invited. ",
   "pli-tv-kd4:8.2.8": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
