--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -562,7 +562,7 @@
   "pli-tv-kd4:9.2.9": "They know ",
   "pli-tv-kd4:9.2.10": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:9.2.11": "They think, ʻIs it allowable for us to do the invitation procedure, or is it not?’ Being unsure, they do the invitation procedure. ",
-  "pli-tv-kd4:9.2.12": "During the procedure, a smaller number of resident monks arrive. ",
+  "pli-tv-kd4:9.2.12": "While they’re doing it, a smaller number of resident monks arrive. ",
   "pli-tv-kd4:9.2.13": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:9.2.14": "And there’s an offense of wrong conduct for those who already have invited. ",
   "pli-tv-kd4:9.2.15": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
