--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -584,7 +584,7 @@
   "pli-tv-kd4:10.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:10.1.4": "They think, ʻIt’s allowable for us to do the invitation procedure; it’s not unallowable.’ ",
   "pli-tv-kd4:10.1.5": "Being anxious, they do the invitation procedure. ",
-  "pli-tv-kd4:10.1.6": "During the procedure a greater number of resident monks arrive. ",
+  "pli-tv-kd4:10.1.6": "While they’re doing it, a greater number of resident monks arrive. ",
   "pli-tv-kd4:10.1.7": "In such a case those monks should do the invitation procedure once more. ",
   "pli-tv-kd4:10.1.8": "And there’s an offense of wrong conduct for those who already have invited. ",
   "pli-tv-kd4:10.2.1": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
