--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -592,7 +592,7 @@
   "pli-tv-kd4:10.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:10.2.4": "They think, ʻIt’s allowable for us to do the invitation procedure; it’s not unallowable.’ ",
   "pli-tv-kd4:10.2.5": "Being anxious, they do the invitation procedure. ",
-  "pli-tv-kd4:10.2.6": "During the procedure an equal number of resident monks arrive. ",
+  "pli-tv-kd4:10.2.6": "While they’re doing it, an equal number of resident monks arrive. ",
   "pli-tv-kd4:10.2.7": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:10.2.8": "And there’s an offense of wrong conduct for those who already have invited. ",
   "pli-tv-kd4:10.2.9": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
