--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -639,7 +639,7 @@
   "pli-tv-kd4:11.2.11": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.12": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
   "pli-tv-kd4:11.2.13": "And aiming at schism, they do the invitation procedure. ",
-  "pli-tv-kd4:11.2.14": "During the procedure a smaller number of resident monks arrive. ",
+  "pli-tv-kd4:11.2.14": "While they’re doing it, a smaller number of resident monks arrive. ",
   "pli-tv-kd4:11.2.15": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:11.2.16": "And there’s a serious offense for those who already have invited. ",
   "pli-tv-kd4:11.2.17": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
