--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -929,7 +929,7 @@
   "pli-tv-kd2:28.1.4": "Perceiving that they were acting according to the Teaching and the Monastic Law, perceiving that the assembly was complete although it was not, they did the observance-day procedure and recited the Monastic Code. ",
   "pli-tv-kd2:28.1.5": "While they were doing it, a greater number of resident monks arrived. ",
   "pli-tv-kd2:28.1.6": "They told the Buddha. ",
-  "pli-tv-kd2:28.2.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:28.2.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:28.2.2": "They don’t know ",
   "pli-tv-kd2:28.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:28.2.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the observance-day procedure and recite the Monastic Code. ",
