--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -957,7 +957,7 @@
   "pli-tv-kd2:28.4.5": "When they’ve just finished, a greater number of resident monks arrive. ",
   "pli-tv-kd2:28.4.6": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:28.4.7": "And there’s no offense for the reciters. ",
-  "pli-tv-kd2:28.4.8": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:28.4.8": "On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:28.4.9": "They don’t know ",
   "pli-tv-kd2:28.4.10": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:28.4.11": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the observance-day procedure and recite the Monastic Code. ",
