--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1013,7 +1013,7 @@
   "pli-tv-kd2:28.6.19": "When they’ve just finished, and only some members of the gathering have left, a smaller number of resident monks arrive. ",
   "pli-tv-kd2:28.6.20": "In such a case, what has been recited is valid, and the late arrivals should announce their purity in the presence of the others. ",
   "pli-tv-kd2:28.6.21": "And there’s no offense for the reciters. ",
-  "pli-tv-kd2:28.7.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:28.7.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:28.7.2": "They don’t know ",
   "pli-tv-kd2:28.7.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:28.7.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the observance-day procedure and recite the Monastic Code. ",
