--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -871,7 +871,7 @@
   "pli-tv-kd2:27.6.4": "that one shouldn’t confess or receive the confession of shared offenses. ",
   "pli-tv-kd2:27.6.5": "But here the whole sangha has committed the same offense. ",
   "pli-tv-kd2:27.6.6": "So what should we do?” ",
-  "pli-tv-kd2:27.6.8": "“On the observance day it may happen that the whole sangha in a certain monastery has committed the same offense. ",
+  "pli-tv-kd2:27.6.8": "“On the observance day, it may happen that the whole sangha in a certain monastery has committed the same offense. ",
   "pli-tv-kd2:27.6.9": "Those monks should straightaway send a monk to a neighboring monastery: ",
   "pli-tv-kd2:27.6.10": "ʻGo and make amends for this offense. ",
   "pli-tv-kd2:27.6.11": "When you return, we’ll make amends for it with you.’ ",
