Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1173,7 +1173,7 @@
   "pli-tv-kd2:32.2.14": "While they’re doing it, a smaller number of resident monks arrive. ",
   "pli-tv-kd2:32.2.15": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:32.2.16": "And there’s a serious offense for the reciters. ",
-  "pli-tv-kd2:32.2.17": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.2.17": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.18": "They know ",
   "pli-tv-kd2:32.2.19": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.2.20": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
