Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1211,7 +1211,7 @@
   "pli-tv-kd2:32.2.52": "When they’ve just finished, and none of the gathering has left, an equal number of resident monks arrive. ",
   "pli-tv-kd2:32.2.53": "In such a case, what has been recited is valid, and the late arrivals should announce their purity in the presence of the others. ",
   "pli-tv-kd2:32.2.54": "And there’s a serious offense for the reciters. ",
-  "pli-tv-kd2:32.2.55": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.2.55": "On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.56": "They know ",
   "pli-tv-kd2:32.2.57": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.2.58": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
