--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.39:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.39:0.2": "4. In einem Palisanderwald "
+  "sn56.39:0.2": "4. In einem Palisanderwald ",
+  "sn56.39:0.3": "39. Ein Grenzpfosten "
 }
