Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1314,7 +1314,7 @@
   "pli-tv-kd2:34.6.9": "and they see someone, ",
   "pli-tv-kd2:34.6.10": "and then do the observance-day procedure together, ",
   "pli-tv-kd2:34.6.11": "there’s no offense. ",
-  "pli-tv-kd2:34.6.12": "If they do investigate, ",
+  "pli-tv-kd2:34.6.12": "If they investigate, ",
   "pli-tv-kd2:34.6.13": "and they do see someone, ",
   "pli-tv-kd2:34.6.14": "and they then do the observance-day procedure separately, ",
   "pli-tv-kd2:34.6.15": "there’s an offense of wrong conduct. ",
