Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1350,7 +1350,7 @@
   "pli-tv-kd2:34.10.2": "But they have the view that they belong to the same Buddhist sect. Then—",
   "pli-tv-kd2:34.10.3": "If they don’t ask the resident monks about it, and then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:34.10.4": "If they do ask the resident monks about it, but remain unsure, and then do the observance-day procedure together, there’s an offense of wrong conduct. ",
-  "pli-tv-kd2:34.10.5": "If they do ask the resident monks about it, but they remain unsure, yet they then do the observance-day procedure separately, there’s no offense. ",
+  "pli-tv-kd2:34.10.5": "If they do ask the resident monks about it, but remain unsure, and then do the observance-day procedure separately, there’s no offense. ",
   "pli-tv-kd2:34.11.1": "“It may happen that newly arrived monks see resident monks who belong to the same Buddhist sect. ",
   "pli-tv-kd2:34.11.2": "But they have the view that they belong to a different Buddhist sect. Then—",
   "pli-tv-kd2:34.11.3": "If they don’t ask the resident monks about it, and they do the observance-day procedure together, there’s an offense of wrong conduct. ",
