Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -813,7 +813,7 @@
   "pli-tv-kd4:13.1.55": "If they do ask the resident monks about it, and they change their view, but they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.56": "If they do ask the resident monks about it, and they change their view, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.57": "“It may happen that resident monks see newly arrived monks who belong to a different Buddhist sect, ",
-  "pli-tv-kd4:13.1.58": "but they have the view that they belong to the same one. In that case: ",
+  "pli-tv-kd4:13.1.58": "but they have the view that they belong to the same one. In such a case: ",
   "pli-tv-kd4:13.1.59": "If they don’t ask the newly arrived monks about it, and they do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.60": "If they do ask the newly arrived monks about it, but they don’t reach a clear conclusion, and they then do the invitation procedure together, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.61": "If they do ask the newly arrived monks about it, but they don’t reach a clear conclusion, and they then do the invitation procedure separately, there’s no offense. ",
