Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -15,7 +15,7 @@
   "mn10:3.5": "gyvena kontempliuodamas reiškinius reiškiniuose, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu.",
   "mn10:4.0.1": "1. Kūno kontempliacija",
   "mn10:4.0.2": "1.1 Atidos kvėpavimui skyrius",
-  "mn10:4.1": "Ir kaip, vienuoliai, vienuolis gyvena kūne, kontempliuodamas kūną?",
+  "mn10:4.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną?",
   "mn10:4.2": "Štai vienuolis nuėjęs ar į mišką, ar po medžiu, ar į atokią vietą atsisėda sukryžiavęs kojas, laikydamas kūną tiesiai, sutelkęs atidą priešais save.",
   "mn10:4.3": "Jis įkvepia (būdamas) atidus, iškvepia (būdamas) atidus.",
   "mn10:4.4": "Ilgai įkvėpdamas jis supranta: „Įkvepiu ilgai”, – ilgai iškvėpdamas supranta: „Iškvepiu ilgai”.",
