Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -124,5 +124,5 @@
   "mn10:35.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas protą kaip protą.",
   "mn10:36.0.1": "4. Principų kontempliacija",
   "mn10:36.0.2": "4.1 Кliūčių skyrius",
-  "mn10:36.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas principus principuose?"
+  "mn10:36.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas principus kaip principus?"
 }
