Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -126,5 +126,6 @@
   "mn10:36.0.2": "4.1 Кliūčių skyrius",
   "mn10:36.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas principus kaip principus?",
   "mn10:36.2": "Štai, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus.",
-  "mn10:36.3": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus?"
+  "mn10:36.3": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus?",
+  "mn10:36.4": "Štai vienuolis, viduje esant juslinių malonumų geismui, supranta: „Manyje yra juslinių malonumų geismas”, – arba viduje nesant juslinių malonumų geismo supranta: „Mano viduje nėra juslinių malonumų geismo“. Jis taip pat supranta kaip kyla dar nekilęs juslinių malonumų geismas, supranta kaip pašalinamas kilęs juslinių malonumų geismas, ir kaip nebekyla pašalintas juslinių malonumų geismas, jis taip pat supranta."
 }
