Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -134,5 +134,6 @@
   "mn10:36.8": "Viduje esant abejonei, jis supranta: „Manyje yra abejonė”, – arba viduje nesant abejones, supranta: „Mano viduje nėra abejones“. Jis taip pat supranta kaip kyla dar nekilusi abejonė, supranta kaip pašalinama kilusi abejonė, ir kaip nebekyla pašalinta abejonė, jis taip pat supranta.",
   "mn10:37.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
   "mn10:37.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
-  "mn10:37.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša."
+  "mn10:37.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
+  "mn10:37.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus."
 }
