Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -137,6 +137,6 @@
   "mn10:37.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:37.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus.",
   "mn10:38.0": "4.2 Sandų skyrius",
-  "mn10:38.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas savinamus sandus kaip principus.",
+  "mn10:38.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus.",
   "mn10:38.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus?"
 }
