Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -139,5 +139,6 @@
   "mn10:38.0": "4.2 Sandų skyrius",
   "mn10:38.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus.",
   "mn10:38.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus?",
-  "mn10:38.3": "Štai, vienuoliai, vienuolis (supranta):"
+  "mn10:38.3": "Štai, vienuoliai, vienuolis (supranta):",
+  "mn10:38.7": "Tai yra proto dariniai, tai – proto darinių kilimas, tai – proto darinių išnykimas."
 }
