Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -141,5 +141,6 @@
   "mn10:38.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus?",
   "mn10:38.3": "Štai, vienuoliai, vienuolis (supranta):",
   "mn10:38.6": "Tai yra suvokimas, tai – suvokimo kilimas, tai – suvokimo išnykimas.",
-  "mn10:38.7": "Tai yra proto dariniai, tai – proto darinių kilimas, tai – proto darinių išnykimas."
+  "mn10:38.7": "Tai yra proto dariniai, tai – proto darinių kilimas, tai – proto darinių išnykimas.",
+  "mn10:38.8": "Tai yra sąmonė, tai – sąmonės kilimas, tai – sąmonės išnykimas."
 }
