Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn56.39:2.4": "Weil diese Baumwollflocke so leicht ist. ",
   "sn56.39:2.5": "Ebenso gibt es Asketen und Brahmanen, die nicht wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
   "sn56.39:2.6": "Sie blicken zum Gesicht eines anderen Asketen oder Brahmanen auf: ",
-  "sn56.39:2.7": "‚Sicher weiß und sieht dieser werte Herr.‘ "
+  "sn56.39:2.7": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
+  "sn56.39:2.8": "Und warum? "
 }
