Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -139,5 +139,5 @@
   "mn1:50.2": "એ શેના માટે?",
   "mn1:50.3": "એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે, કહું છું.",
   "mn1:50.4": " અરહંત ",
-  "mn1:51.1": "ભિક્ષુઓ, જે ભિક્ષુ અશુધ્ધિઓના અંત દ, "
+  "mn1:51.1": "ભિક્ષુઓ, જે ભિક્ષુ અશુધ્ધિઓના અંત દ્વારા અ૨હંત છે, જેમણે ધાર્મિક જીવન જીવ્યું છે, જે કરવાનુ હતું તે કર્યું છે, બોજ઼ મૂકી દીધો છે, પોતાનો ધ્યેય સિધ્ધ કર્યો છે, અસ્તિત્વના બંધનનો સંપૂર્ણપણે વિનાશ કર્યો છે, જે સમ્મજ્ઞાન દ્વારા સંપૂર્ણપણે મુક્ત થયા છે એઓ પણ "
 }
