Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -145,5 +145,6 @@
   "mn10:38.6": "Tai yra suvokimas, tai – suvokimo kilimas, tai – suvokimo išnykimas.",
   "mn10:38.7": "Tai yra proto dariniai, tai – proto darinių kilimas, tai – proto darinių išnykimas.",
   "mn10:38.8": "Tai yra sąmonė, tai – sąmonės kilimas, tai – sąmonės išnykimas.",
-  "mn10:39.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje."
+  "mn10:39.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
+  "mn10:39.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį."
 }
