Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -178,5 +178,6 @@
   "mn10:43.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus.",
   "mn10:44.0": "Tiesų skirius",
   "mn10:44.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
-  "mn10:44.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus?"
+  "mn10:44.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus?",
+  "mn10:44.3": "Štai, vienuoliai, vienuolis supranta kaip yra iš tikrųjų: „Tai yra kančia”, – supranta kaip yra iš tikrųjų: „Tai yra kančios šaltinis”, – supranta kaip yra iš tikrųjų: „Tai yra kančios pabaiga”, – supranta kaip yra iš tikrųjų: „Tai yra kelias į kančios pabaigą”."
 }
