Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -181,5 +181,6 @@
   "mn10:44.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus?",
   "mn10:44.3": "Štai, vienuoliai, vienuolis supranta kaip yra iš tikrųjų: „Tai yra kančia”, – supranta kaip yra iš tikrųjų: „Tai yra kančios šaltinis”, – supranta kaip yra iš tikrųjų: „Tai yra kančios pabaiga”, – supranta kaip yra iš tikrųjų: „Tai yra kelias į kančios pabaigą”.",
   "mn10:45.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
-  "mn10:45.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį."
+  "mn10:45.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
+  "mn10:45.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša."
 }
