Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -190,5 +190,6 @@
   "mn10:46.4": "Bet kas, vienuoliai, kas šešis metus taip vysto šias keturias atidos sritis …",
   "mn10:46.5": "penkis metus …",
   "mn10:46.6": "keturis metus …",
-  "mn10:46.7": "tris metus …"
+  "mn10:46.7": "tris metus …",
+  "mn10:46.8": "du metus …"
 }
