Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -192,5 +192,6 @@
   "mn10:46.6": "ketveris metus …",
   "mn10:46.7": "trejus metus …",
   "mn10:46.8": "dvejus metus …",
-  "mn10:46.9": "vienerius metus …"
+  "mn10:46.9": "vienerius metus …",
+  "mn10:46.10": "Ką ten vienerius metus,"
 }
