Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -193,5 +193,6 @@
   "mn10:46.7": "trejus metus …",
   "mn10:46.8": "dvejus metus …",
   "mn10:46.9": "vienerius metus …",
-  "mn10:46.10": "Palikime, vienuoliai,  vienerius metus."
+  "mn10:46.10": "Palikime, vienuoliai,  vienerius metus.",
+  "mn10:46.11": "Bet kas, vienuoliai, kas septynis mėnesius taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:"
 }
