Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -195,5 +195,6 @@
   "mn10:46.9": "vienerius metus …",
   "mn10:46.10": "Palikime, vienuoliai,  vienerius metus.",
   "mn10:46.11": "Bet kas, vienuoliai, kas septynis mėnesius taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:",
-  "mn10:46.12": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio)."
+  "mn10:46.12": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio).",
+  "mn10:46.13": "Palikime, vienuoliai, septynis mėnesius."
 }
