Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -198,6 +198,6 @@
   "mn10:46.12": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio).",
   "mn10:46.13": "Palikime, vienuoliai, septynis mėnesius.",
   "mn10:46.14": "Bet kas, vienuoliai, kas šešis mėnesius taip vysto šias keturias atidos sritis …",
-  "mn10:46.15": "penkis mėnesius",
+  "mn10:46.15": "penkis mėnesius …",
   "mn10:46.16": "keturis mėnesius"
 }
