Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -202,5 +202,6 @@
   "mn10:46.16": "keturis mėnesius …",
   "mn10:46.17": "tris mėnesius …",
   "mn10:46.18": "du mėnesius …",
-  "mn10:46.19": "vieną mėnesį"
+  "mn10:46.19": "vieną mėnesį",
+  "mn10:46.20": "pusmėnesį …"
 }
