Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -20,7 +20,7 @@
   "mn10:4.3": "Jis įkvepia (būdamas) atidus, iškvepia (būdamas) atidus.",
   "mn10:4.4": "Ilgai įkvėpdamas jis supranta: „Įkvepiu ilgai”, – ilgai iškvėpdamas supranta: „Iškvepiu ilgai”.",
   "mn10:4.5": "Trumpai įkvėpdamas jis supranta: „Įkvepiu trumpai”, – trumpai iškvėpdamas supranta: „Iškvepiu trumpai”.",
-  "mn10:4.6": "Jis mokosi: „Įkvėpsiu patirdamas visą kūną”, – mokosi: „iškvėpsiu patirdamas visą kūną”.",
+  "mn10:4.6": "Jis mokosi: „Įkvėpsiu patirdamas visą kūną”, – mokosi: „Iškvėpsiu patirdamas visą kūną”.",
   "mn10:4.7": "Jis mokosi: „Įkvėpsiu nuramindamas kūno darinius”, – mokosi: „Iškvėpsiu nuramindamas kūno darinius”.",
   "mn10:4.8": "Panašiai, vienuoliai, kaip įgudęs tekintojas arba tekintojo padėjėjas, sukdamas (detalę ant staklių) ilgai, supranta: „Suku ilgai”, – sukdamas trumpai, supranta: „Suku trumpai“.",
   "mn10:4.9": "Lygiai gi, vienuoliai, taip ilgai įkvėpdamas vienuolis supranta: „Įkvepiu ilgai”, – ilgai iškvėpdamas supranta: „Iškvepiu ilgai”. Trumpai įkvėpdamas jis supranta: „Įkvepiu trumpai”, – trumpai iškvėpdamas supranta: „Iškvepiu trumpai”.",
