Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -57,7 +57,7 @@
   "mn10:12.5": "„Šiame kūne yra žemės elementas, vandens elementas, ugnies elementas, vėjo elementas.”",
   "mn10:13.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
   "mn10:13.2": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną.",
-  "mn10:14.0": "1.6 Devynios kapinės kontempliacijos",
+  "mn10:14.0": "1.6 Devynios kapinинės kontempliacijos",
   "mn10:14.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas vienos dienos senumo, dviejų dienų senumo ar trijų dienų senumo išmestą kapinėse kūną, ištinusį, pamėlynavusi, pūvantį,",
   "mn10:14.2": "sutelkia dėmesį į šitą patį kūną:",
   "mn10:14.3": "„Šitas gi kūnas yra tokios pat prigimties, tokia (jo) ateitis, (jis) to neišvengs.”",
